Fix image and text spacing

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ html {
 
 img {
   width: 100%;
+  border-collapse: collapse;
 }
 
 h2 {
